[package]
name = "warp_test_picard"
version = "0.1.0"
authors = ["maxluchs"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ship"
path = "src/bin/main.rs"

[[bin]]
name = "seed"
path = "src/seed.rs"

[lib]
name = "warp_ships"
path = "src/lib.rs"

[dependencies]
warp = "0.3.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
r2d2 = "0.8.9"
eyre = "0.6.5"
uuid = { version = "0.8.2", features = ["v4"] }
dotenv = "0.15.0"
tokio = { version = "1.2.0", features = ["full"] }
serde = { version = "1.0.123", features = ["derive"] }
thiserror = "1.0.24"